--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pojet Dataviz</title>
+    <title>Projet Dataviz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <script src="countries_states.js"></script>
-    <script src="js/threeGeoJSON.js"></script>
     <script src="js/three.js"></script>
+    <script src="js/controls/OrbitControls.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
