--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
+    <select name="" id="selectDate">
+        <option value="1990" selected>1990</option>
+        <option value="2014">2014</option>
+    </select>
     <script src="js/three.js"></script>
     <script src="js/main.js"></script>
 </body>
