--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
+    <div class="home" id="home">
+        <section>
+            <h1>CO²WORLD</h1>
+            <h2>Découvrez l’importance des émissions de Co2 vis-à-vis du changement climatique.</h2>
+            <button id="next1">Découvrir</button>
+        </section>
+    </div>
+    <div class="page1" id="page1">
+        <section>
+            <h1>CO²WORLD</h1>
+            <h2>Découvrez l’importance des émissions de Co2 vis-à-vis du changement climatique.</h2>
+            <button id="next2">Découvrir</button>
+        </section>
+    </div>
+    <div class="page2" id="page2">
+        <section>
+            <h1>CO²WORLD</h1>
+            <h2>Découvrez l’importance des émissions de Co2 vis-à-vis du changement climatique.</h2>
+            <button id="next3">Découvrir</button>
+        </section>
+    </div>
     <select name="" id="selectDate">
         <option value="1990" selected>1990</option>
         <option value="2014">2014</option>
